# Declutter

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
source/declutter/: functions.py  main.py
test/: test_declutter.py
