[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "declutter"
version = "0.1.0"
description = "A python project to organize files."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Abhinav", email="look4abhinav@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
declutter = "declutter.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["source/declutter"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["test"]
